; ModuleID = '/home/carl/AnghaBench/linux/arch/xtensa/platforms/iss/extr_network.c_tuntap_write.c'
source_filename = "/home/carl/AnghaBench/linux/arch/xtensa/platforms/iss/extr_network.c_tuntap_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iss_net_private = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }
%struct.sk_buff = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iss_net_private*, %struct.sk_buff**)* @tuntap_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tuntap_write(%struct.iss_net_private* %0, %struct.sk_buff** %1) #0 {
  %3 = alloca %struct.iss_net_private*, align 8
  %4 = alloca %struct.sk_buff**, align 8
  store %struct.iss_net_private* %0, %struct.iss_net_private** %3, align 8
  store %struct.sk_buff** %1, %struct.sk_buff*** %4, align 8
  %5 = load %struct.iss_net_private*, %struct.iss_net_private** %3, align 8
  %6 = getelementptr inbounds %struct.iss_net_private, %struct.iss_net_private* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.sk_buff**, %struct.sk_buff*** %4, align 8
  %12 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  %13 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.sk_buff**, %struct.sk_buff*** %4, align 8
  %16 = load %struct.sk_buff*, %struct.sk_buff** %15, align 8
  %17 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @simc_write(i32 %10, i32 %14, i32 %18)
  ret i32 %19
}

declare dso_local i32 @simc_write(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
